--- a/web/css/main.css
+++ b/web/css/main.css
@@ -41,3 +41,52 @@ body {
     background: #1a8448;
     border-color: #1a8448
 }
+
+/* shadow */
+.card{
+    cursor:pointer;
+}
+
+.box-shadow{
+	-webkit-box-shadow: 0 1px 1px rgba(72,78,85,.6);
+	box-shadow: 0 1px 1px rgba(72,78,85,.6);
+	-webkit-transition: all .2s ease-out;
+	-moz-transition: all .2s ease-out;
+	-ms-transition: all .2s ease-out;
+	-o-transition: all .2s ease-out;
+	transition: all .2s ease-out;
+}
+
+.box-shadow:hover{
+	-webkit-box-shadow: 0 20px 40px rgba(72,78,85,.6);
+	box-shadow: 0 10px 40px rgba(72,78,85,.6);
+	-webkit-transform: translateY(-5px);
+	-moz-transform: translateY(-5px);
+	-ms-transform: translateY(-5px);
+	-o-transform: translateY(-5px);
+	transform: translateY(-5px);
+}
+
+
+.card svg{
+	position:absolute;
+	top:19rem;
+  -webkit-transition: all .2s ease-out;
+	-moz-transition: all .2s ease-out;
+	-ms-transition: all .2s ease-out;
+	-o-transition: all .2s ease-out;
+	transition: all .2s ease-out;
+	filter:drop-shadow(2px -9px 4px rgba(0, 69, 134, 0.2));
+}
+.card:hover svg{
+	filter:drop-shadow(2px -9px 4px rgba(0, 69, 134, 0.4));
+}
+
+
+
+/*.card:hover i{*/
+/*	transform: rotate(-180deg);*/
+/*}*/
+
+
+/* shadow end */
